--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://5.35.104.57:8081",
   "browserslist": {
     "production": [
       ">0.2%",
