--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "zaqa-_web",
+  "name": "zaqaz-_web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.16.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "normalize.css": "^8.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +32,10 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://5.35.104.57:8081",
+  
+    "proxy": "http://5.35.104.57:8081",
+
+
   "browserslist": {
     "production": [
       ">0.2%",
