--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
+    "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.1.3",
+    "@mui/x-date-pickers": "^7.20.0",
+    "@mui/x-date-pickers-pro": "^7.20.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.13",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -32,10 +36,7 @@
       "react-app/jest"
     ]
   },
-  
-    "proxy": "http://5.35.104.57:8081",
-
-
+  "proxy": "http://5.35.104.57:8081",
   "browserslist": {
     "production": [
       ">0.2%",
