--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "homepage": "http://Infoland-kz.github.io/ZAQAZ_GROUP_Web",
+  "homepage": "https://Infoland-kz.github.io/ZAQAZ_GROUP_Web",
   "name": "zaqaz-_web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
