--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Infoland-kz.github.io/ZAQAZ_GROUP_Web",
+  "homepage": "https://Infoland-kz.github.io/ZAQAZ_GROUP_Web/",
   "name": "zaqaz-_web",
   "version": "0.1.0",
   "private": true,
